# CenterCTF-V

./: .gitmodules  README.md
checkers/: requirements.txt
checkers/battleship/: battleship_lib.py  checker.py
checkers/gostpost/: checker.py  checker_api_client.py
checkers/ship_management_system/: checker.py  sms_lib.py
services/battleship/: .dockerignore  docker-compose.yml
services/battleship/backend/: Dockerfile  go.mod  main.go
services/gostpost/: .dockerignore  .gitignore  Dockerfile  app.py  docker-compose.yml  requirements.txt  run.sh
services/ship_management_system/: CMakeLists.txt  Dockerfile  docker-compose.yml
services/ship_management_system/database/: init.sql
services/ship_management_system/fleet-management-frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
services/ship_management_system/fleet-management-frontend/src/: App.vue  main.js
services/ship_management_system/fleet-management-frontend/src/router/: index.js
services/ship_management_system/fleet-management-frontend/src/services/: api.js
services/ship_management_system/fleet-management-frontend/src/stores/: auth.js
services/ship_management_system/fleet-management-frontend/src/utils/: base64.js
services/ship_management_system/fleet-management-frontend/src/views/: AdmiralDashboardView.vue  CaptainDashboardView.vue  LoginView.vue  NotFoundView.vue  RegisterView.vue  UserDashboardView.vue
services/ship_management_system/include/: admiral_handler.h  captain_handler.h  config.h.in  global.h  jwt.h  storage.h  user_handler.h  utils.h
services/ship_management_system/scripts/: clean.sh  compile.sh  install_lib.sh  make.sh
services/ship_management_system/src/: CMakeLists.txt  admiral_handler.cpp  captain_handler.cpp  global.cpp  jwt.cpp  main.cpp  storage.cpp  user_handler.cpp  utils.cpp
sploits/battleship/: README.md  battleship_lib.py  sploit.py
sploits/gostpost/: README.md  api_client.py  requirements.txt  sploit.py
sploits/ship_management_system/: README.md  solve.py
(+32 files in other folders)
